--- a/trurail-simulations/adriana-county-bundle.html
+++ b/trurail-simulations/adriana-county-bundle.html
@@ -175,7 +175,7 @@
                                     <i class="fas fa-file-archive" style="font-size: 1.25rem; color: #888;"></i>
                                 </div>
                                 <div style="flex: 1;">
-                                    <div style="font-weight: 500; color: #fff; font-size: 0.95rem;">TRS - ACDXBundle.7z</div>
+                                    <div style="font-weight: 500; color: #fff; font-size: 0.95rem;">ACDXBundle.7z</div>
                                     <div style="display: flex; gap: 1rem; font-size: 0.8rem; color: #888; margin-top: 0.2rem; flex-wrap: wrap;">
                                         <span><i class="fas fa-hdd" style="margin-right: 0.25rem;"></i><span data-file-size>Loading...</span></span>
                                         <span><i class="fas fa-clock" style="margin-right: 0.25rem;"></i><span data-file-uploaded>Loading...</span></span>
