--- a/trurail-simulations/bnsf-c44-9w-heritage-2.html
+++ b/trurail-simulations/bnsf-c44-9w-heritage-2.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Visual and audible overhaul of the BNSF C44-9W DLC, focusing on the H1 scheme. ">
     <meta name="keywords" content="train simulator, mods, archive, truRail, clearTracks, UTS creations, east coast simulations">
-    <title>BNSF C44-9W (Heritage 1)- Train Simulator Mod Archive</title>
+    <title>BNSF C44-9W Heritage 2 - Train Simulator Mod Archive</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preload" href="https://files.trainsimarchive.org/media/tsma-logo.png" as="image">
@@ -71,11 +71,11 @@
             <div class="text-gray-400 mb-2">
                 <a href="../index.html" class="hover:underline">Home</a> >
                 <a href="../trurail-simulations.html" class="hover:underline">TruRail Simulations</a> >
-                <span>BNSF C44-9W Heritage 1</span>
+                <span>BNSF C44-9W Heritage 2</span>
             </div>
             <div class="flex justify-between items-start mb-2">
                 <div>
-                    <h1 class="text-2xl font-bold">BNSF C44-9W Heritage 1</h1>
+                    <h1 class="text-2xl font-bold">BNSF C44-9W Heritage 2</h1>
                     <p class="text-gray-400">By <a href="../trurail-simulations.html" class="hover:underline">TruRail Simulations</a></p>
                 </div>
                 <div class="download-section">
@@ -91,7 +91,7 @@
                 <div>
                     <div class="mod-gallery">
                         <div class="mod-gallery-main">
-                            <img id="mainDisplayImage" src="https://files.trainsimarchive.org/media/unnamed.png" alt="BNSF C44-9W Heritage 1">
+                            <img id="mainDisplayImage" src="https://lh3.googleusercontent.com/sitesv/AAzXCkfySnFli97MjqadCK2jQ6ofwdvSE32eiSiTXae7frbbKrqQkYKwOeyZA_j49Z1UfVjWMRuBQ_0r_ZNzIfUCe_Ka5ytpNekvp0NDZ7uXJUP_flNJC3czzrDFIFfGo6gYzJBlp2PS2alT4SemWzhicdqfuSCmw-J7F1y_leITC0s7AgxSgfWSgL7X0dfwqmqlq2qm4vwlk42LQRJkNPKkELrCUvTPHoLKlznQe1w=w1280" alt="BNSF C44-9W Heritage 2">
                             <div class="gallery-controls">
                                 <button class="gallery-nav-btn gallery-nav-prev" onclick="event.stopPropagation(); manualNavigateGallery(-1)" aria-label="Previous">
                                     <i class="fas fa-chevron-left"></i>
@@ -105,19 +105,7 @@
                         </div>
                         <div class="mod-gallery-thumbs">
                             <div class="gallery-thumb" onclick="openLightbox(0)" data-index="0">
-                                <img src="https://files.trainsimarchive.org/media/unnamed.png" alt="Image 1">
-                            </div>
-                            <div class="gallery-thumb" onclick="openLightbox(1)" data-index="1">
-                                <img src="https://files.trainsimarchive.org/media/unnamed2.png" alt="Image 2">
-                            </div>
-                            <div class="gallery-thumb" onclick="openLightbox(2)" data-index="2">
-                                <img src="https://files.trainsimarchive.org/media/unnamed3.png" alt="Image 3">
-                            </div>
-                            <div class="gallery-thumb" onclick="openLightbox(3)" data-index="3">
-                                <img src="https://files.trainsimarchive.org/media/unnamed4.png" alt="Image 4">
-                            </div>
-                            <div class="gallery-thumb" onclick="openLightbox(4)" data-index="4">
-                                <img src="https://files.trainsimarchive.org/media/unnamed5.png" alt="Image 5">
+                                <img src="https://lh3.googleusercontent.com/sitesv/AAzXCkfySnFli97MjqadCK2jQ6ofwdvSE32eiSiTXae7frbbKrqQkYKwOeyZA_j49Z1UfVjWMRuBQ_0r_ZNzIfUCe_Ka5ytpNekvp0NDZ7uXJUP_flNJC3czzrDFIFfGo6gYzJBlp2PS2alT4SemWzhicdqfuSCmw-J7F1y_leITC0s7AgxSgfWSgL7X0dfwqmqlq2qm4vwlk42LQRJkNPKkELrCUvTPHoLKlznQe1w=w1280" alt="Image 1">
                             </div>
                         </div>
                     </div>
@@ -135,12 +123,8 @@
                         <li>Enhanced interior</li>
                         <li>Dynamic numbering</li>
                         <li>Headlight casting</li>
-                        <li>Temp Sim V2</li>
-                        <li>Step lights</li>
-                        <li>Enhanced physics</li>
-                        <li>New couplers</li>
-                        <li>New engine audio</li>
-                        <li>New couplers</li>                                                
+                        <li>MSTS "4723"</li>
+                        <li>CCB-II braking system</li>                                           
                     </ul>
                     
                     <h3 style="font-size: 1.1rem; margin-bottom: 0.5rem;">Requirements</h3>
