--- a/trurail-simulations/southern-pacific-gp9.html
+++ b/trurail-simulations/southern-pacific-gp9.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Visual and audible overhaul of the BNSF C44-9W DLC, focusing on the H1 scheme. ">
+    <meta name="description" content="Multiple repaints of EMD's GP40-2 and the PS 4750 Hopper into Adriana County liveries. ">
     <meta name="keywords" content="train simulator, mods, archive, truRail, clearTracks, UTS creations, east coast simulations">
-    <title>BNSF C44-9W (Heritage 1)- Train Simulator Mod Archive</title>
+    <title>Southern Pacific GP9 - Train Simulator Mod Archive</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preload" href="https://files.trainsimarchive.org/media/tsma-logo.png" as="image">
@@ -71,18 +71,18 @@
             <div class="text-gray-400 mb-2">
                 <a href="../index.html" class="hover:underline">Home</a> >
                 <a href="../trurail-simulations.html" class="hover:underline">TruRail Simulations</a> >
-                <span>BNSF C44-9W Heritage 1</span>
+                <span>Southern Pacific GP9</span>
             </div>
             <div class="flex justify-between items-start mb-2">
                 <div>
-                    <h1 class="text-2xl font-bold">BNSF C44-9W Heritage 1</h1>
+                    <h1 class="text-2xl font-bold">Southern Pacific GP9</h1>
                     <p class="text-gray-400">By <a href="../trurail-simulations.html" class="hover:underline">TruRail Simulations</a></p>
                 </div>
                 <div class="download-section">
                     <a href="#" 
                        class="mod-exconrail-download-button download-trigger" 
-                       data-url="https://files.trainsimarchive.org/TRS%20-%20BNSF_H1_D9.rar"
-                       data-name="TRS - BNSF_H1_D9.rar">
+                       data-url="https://files.trainsimarchive.org/TRS%20-%20SP_GP9"
+                       data-name="TRS - SP_GP9.zip">
                         Download
                     </a>
                 </div>
@@ -91,7 +91,7 @@
                 <div>
                     <div class="mod-gallery">
                         <div class="mod-gallery-main">
-                            <img id="mainDisplayImage" src="https://files.trainsimarchive.org/media/unnamed.png" alt="BNSF C44-9W Heritage 1">
+                            <img id="mainDisplayImage" src="https://files.trainsimarchive.org/media/14a601_365a82a91d5743a0a14878e0c4494f0c~mv2.jpg" alt="Southern Pacific GP9">
                             <div class="gallery-controls">
                                 <button class="gallery-nav-btn gallery-nav-prev" onclick="event.stopPropagation(); manualNavigateGallery(-1)" aria-label="Previous">
                                     <i class="fas fa-chevron-left"></i>
@@ -105,19 +105,22 @@
                         </div>
                         <div class="mod-gallery-thumbs">
                             <div class="gallery-thumb" onclick="openLightbox(0)" data-index="0">
-                                <img src="https://files.trainsimarchive.org/media/unnamed.png" alt="Image 1">
+                                <img src="https://files.trainsimarchive.org/media/14a601_365a82a91d5743a0a14878e0c4494f0c~mv2.jpg" alt="Image 1">
                             </div>
                             <div class="gallery-thumb" onclick="openLightbox(1)" data-index="1">
-                                <img src="https://files.trainsimarchive.org/media/unnamed2.png" alt="Image 2">
+                                <img src="https://files.trainsimarchive.org/media/14a601_0be378bbc79a4235a91b6d888537cc78~mv2.jpg" alt="Image 2">
                             </div>
                             <div class="gallery-thumb" onclick="openLightbox(2)" data-index="2">
-                                <img src="https://files.trainsimarchive.org/media/unnamed3.png" alt="Image 3">
+                                <img src="https://files.trainsimarchive.org/media/14a601_551a9c2722dc4462954bb46c75ce9c77~mv2.jpg" alt="Image 3">
                             </div>
                             <div class="gallery-thumb" onclick="openLightbox(3)" data-index="3">
-                                <img src="https://files.trainsimarchive.org/media/unnamed4.png" alt="Image 4">
+                                <img src="https://files.trainsimarchive.org/media/14a601_4a830fe9245040889dd215ff72673cca~mv2.jpg" alt="Image 4">
                             </div>
                             <div class="gallery-thumb" onclick="openLightbox(4)" data-index="4">
-                                <img src="https://files.trainsimarchive.org/media/unnamed5.png" alt="Image 5">
+                                <img src="https://files.trainsimarchive.org/media/14a601_3e5cb19457a54d0ab65890b4413683a9~mv2.jpg" alt="Image 5">
+                            </div>
+                            <div class="gallery-thumb" onclick="openLightbox(5)" data-index="5">
+                                <img src="https://files.trainsimarchive.org/media/14a601_02bbc9eff3f24881891c5b09a93194f3~mv2.jpg" alt="Image 6">
                             </div>
                         </div>
                     </div>
@@ -126,39 +129,38 @@
                 <div>
                     <h3 style="font-size: 1.1rem; margin-bottom: 0.5rem;">Description</h3>
                     <p style="margin-bottom: 1.5rem;">
-                        This download contains a visual and audible overhaul of the BNSF C44-9W DLC, focusing on the H1 scheme.
+                        This download contains a repaint of EMD's GP9 into Southern Pacific's 'Bloody Nose' paint scheme.
                     </p>
                     
                     <h3 style="font-size: 1.1rem; margin-bottom: 0.5rem;">Features</h3>
                     <ul class="requirements-list" style="margin-bottom: 1.5rem;">
-                        <li>Dynamic exhaust</li>
-                        <li>Enhanced interior</li>
-                        <li>Dynamic numbering</li>
-                        <li>Headlight casting</li>
-                        <li>Temp Sim V2</li>
-                        <li>Step lights</li>
-                        <li>Enhanced physics</li>
-                        <li>New couplers</li>
-                        <li>New engine audio</li>
-                        <li>New couplers</li>                                                
+                        <li>4K Textures</li>
+                        <li>Custom decals</li>
+                        <li>New headlights</li>
+                        <li>New marker lights</li>
+                        <li>Accurate colors</li>
+                        <li>New Cast P3</li>
+                        <li>Bronze Bell</li>
+                        <li>New Exhaust</li>
+                        <li>New Blomberg Trucks</li>
                     </ul>
                     
                     <h3 style="font-size: 1.1rem; margin-bottom: 0.5rem;">Requirements</h3>
                     <ul class="requirements-list" style="margin-bottom: 1.5rem;">
-                        <li><a href="https://store.steampowered.com/app/208356/Train_Simulator_BNSF_Dash_9_Loco_AddOn/" target="_blank">BNSF Dash 9 Loco Add-On</a></li>
+                        <li><a href="https://store.steampowered.com/app/208371/Train_Simulator_GP9_Loco_AddOn/" target="_blank">GP9 Loco Add-On</a></li>
                     </ul>
-                    <div class="file-details-box" data-name="TRS - BNSF_H1_D9.rar">
+                    <div class="file-details-box" data-name="TRS - SP_GP9">
                         <a href="#" 
                            class="download-trigger" 
-                           data-url="https://files.trainsimarchive.org/TRS%20-%20BNSF_H1_D9.rar"
-                           data-name="TRS - BNSF_H1_D9.rar"
+                           data-url="https://files.trainsimarchive.org/TRS%20-%20SP_GP9"
+                           data-name="TRS - SP_GP9.zip"
                            style="display: block; padding: 1rem; background: #1a1a1a; border: 2px solid #333; border-radius: 8px; text-decoration: none; transition: all 0.2s; cursor: pointer;">
                             <div style="display: flex; align-items: center; gap: 0.75rem;">
                                 <div style="width: 40px; height: 40px; display: flex; align-items: center; justify-content: center; background: #252525; border-radius: 6px;">
                                     <i class="fas fa-file-archive" style="font-size: 1.25rem; color: #888;"></i>
                                 </div>
                                 <div style="flex: 1;">
-                                    <div style="font-weight: 500; color: #fff; font-size: 0.95rem;">BNSF_H1_D9.rar</div>
+                                    <div style="font-weight: 500; color: #fff; font-size: 0.95rem;">SP_GP9.zip</div>
                                     <div style="display: flex; gap: 1rem; font-size: 0.8rem; color: #888; margin-top: 0.2rem; flex-wrap: wrap;">
                                         <span><i class="fas fa-hdd" style="margin-right: 0.25rem;"></i><span data-file-size>Loading...</span></span>
                                         <span><i class="fas fa-clock" style="margin-right: 0.25rem;"></i><span data-file-uploaded>Loading...</span></span>
