--- a/trurail-simulations/bnsf-c44-9w-heritage-2.html
+++ b/trurail-simulations/bnsf-c44-9w-heritage-2.html
@@ -81,8 +81,8 @@
                 <div class="download-section">
                     <a href="#" 
                        class="mod-exconrail-download-button download-trigger" 
-                       data-url="https://files.trainsimarchive.org/TRS%20-%20BNSF_H1_D9.rar"
-                       data-name="TRS - BNSF_H1_D9.rar">
+                       data-url="https://files.trainsimarchive.org/TRS%20-%20BNSF_H2_D9.rar"
+                       data-name="TRS - BNSF_H2_D9.rar">
                         Download
                     </a>
                 </div>
@@ -91,7 +91,7 @@
                 <div>
                     <div class="mod-gallery">
                         <div class="mod-gallery-main">
-                            <img id="mainDisplayImage" src="https://lh3.googleusercontent.com/sitesv/AAzXCkfySnFli97MjqadCK2jQ6ofwdvSE32eiSiTXae7frbbKrqQkYKwOeyZA_j49Z1UfVjWMRuBQ_0r_ZNzIfUCe_Ka5ytpNekvp0NDZ7uXJUP_flNJC3czzrDFIFfGo6gYzJBlp2PS2alT4SemWzhicdqfuSCmw-J7F1y_leITC0s7AgxSgfWSgL7X0dfwqmqlq2qm4vwlk42LQRJkNPKkELrCUvTPHoLKlznQe1w=w1280" alt="BNSF C44-9W Heritage 2">
+                            <img id="mainDisplayImage" src="https://files.trainsimarchive.org/media/14a601_cf89462c0bef46d7ac05001071348a16~mv2.jpg" alt="BNSF C44-9W Heritage 2">
                             <div class="gallery-controls">
                                 <button class="gallery-nav-btn gallery-nav-prev" onclick="event.stopPropagation(); manualNavigateGallery(-1)" aria-label="Previous">
                                     <i class="fas fa-chevron-left"></i>
@@ -105,16 +105,16 @@
                         </div>
                         <div class="mod-gallery-thumbs">
                             <div class="gallery-thumb" onclick="openLightbox(0)" data-index="0">
-                                <img src="https://lh3.googleusercontent.com/sitesv/AAzXCkfySnFli97MjqadCK2jQ6ofwdvSE32eiSiTXae7frbbKrqQkYKwOeyZA_j49Z1UfVjWMRuBQ_0r_ZNzIfUCe_Ka5ytpNekvp0NDZ7uXJUP_flNJC3czzrDFIFfGo6gYzJBlp2PS2alT4SemWzhicdqfuSCmw-J7F1y_leITC0s7AgxSgfWSgL7X0dfwqmqlq2qm4vwlk42LQRJkNPKkELrCUvTPHoLKlznQe1w=w1280" alt="Image 1">
+                                <img src="https://files.trainsimarchive.org/media/14a601_cf89462c0bef46d7ac05001071348a16~mv2.jpg" alt="Image 1">
                             </div>
                         </div>
                     </div>
-                    <p class="page-updated">Page Updated: 10/30/2025</p>
+                    <p class="page-updated">Page Updated: 10/31/2025</p>
                 </div>
                 <div>
                     <h3 style="font-size: 1.1rem; margin-bottom: 0.5rem;">Description</h3>
                     <p style="margin-bottom: 1.5rem;">
-                        This download contains a visual and audible overhaul of the BNSF C44-9W DLC, focusing on the H1 scheme.
+                        This download contains a visual and audible overhaul of the BNSF C44-9W DLC, focusing on the H2 scheme.
                     </p>
                     
                     <h3 style="font-size: 1.1rem; margin-bottom: 0.5rem;">Features</h3>
@@ -131,18 +131,18 @@
                     <ul class="requirements-list" style="margin-bottom: 1.5rem;">
                         <li><a href="https://store.steampowered.com/app/208356/Train_Simulator_BNSF_Dash_9_Loco_AddOn/" target="_blank">BNSF Dash 9 Loco Add-On</a></li>
                     </ul>
-                    <div class="file-details-box" data-name="TRS - BNSF_H1_D9.rar">
+                    <div class="file-details-box" data-name="TRS - BNSF_H2_D9.rar">
                         <a href="#" 
                            class="download-trigger" 
-                           data-url="https://files.trainsimarchive.org/TRS%20-%20BNSF_H1_D9.rar"
-                           data-name="TRS - BNSF_H1_D9.rar"
+                           data-url="https://files.trainsimarchive.org/TRS%20-%20BNSF_H2_D9.rar"
+                           data-name="TRS - BNSF_H2_D9.rar"
                            style="display: block; padding: 1rem; background: #1a1a1a; border: 2px solid #333; border-radius: 8px; text-decoration: none; transition: all 0.2s; cursor: pointer;">
                             <div style="display: flex; align-items: center; gap: 0.75rem;">
                                 <div style="width: 40px; height: 40px; display: flex; align-items: center; justify-content: center; background: #252525; border-radius: 6px;">
                                     <i class="fas fa-file-archive" style="font-size: 1.25rem; color: #888;"></i>
                                 </div>
                                 <div style="flex: 1;">
-                                    <div style="font-weight: 500; color: #fff; font-size: 0.95rem;">BNSF_H1_D9.rar</div>
+                                    <div style="font-weight: 500; color: #fff; font-size: 0.95rem;">BNSF_H2_D9.rar</div>
                                     <div style="display: flex; gap: 1rem; font-size: 0.8rem; color: #888; margin-top: 0.2rem; flex-wrap: wrap;">
                                         <span><i class="fas fa-hdd" style="margin-right: 0.25rem;"></i><span data-file-size>Loading...</span></span>
                                         <span><i class="fas fa-clock" style="margin-right: 0.25rem;"></i><span data-file-uploaded>Loading...</span></span>
