--- a/trurail-simulations/autoflood-iii-hopper.html
+++ b/trurail-simulations/autoflood-iii-hopper.html
@@ -56,8 +56,8 @@
     <nav class="mobile-nav" id="mobileNav">
         <div class="mobile-nav-content">
             <input type="text" placeholder="Search..." class="search-input mobile-search" id="mobileSearchInput">
-            <a href="index.html" class="mobile-nav-link">Home</a>
-            <a href="contributors.html" class="mobile-nav-link">Contributors</a>
+            <a href="../index.html" class="mobile-nav-link">Home</a>
+            <a href="../contributors.html" class="mobile-nav-link">Contributors</a>
             <div class="mobile-nav-divider">Archive</div>
             <a href="../trurail-simulations.html" class="mobile-nav-link mobile-nav-sublink">TruRail Simulations</a>
             <a href="#" class="mobile-nav-link mobile-nav-sublink">ClearTracks</a>
