--- a/trurail-simulations.html
+++ b/trurail-simulations.html
@@ -358,7 +358,7 @@
                             <div class="mod-card-image" style="background-image: url('https://files.trainsimarchive.org/media/placeholder.jpg');"></div>
                         </a>
                         <div class="mod-card-content">
-                            <a href="#" class="mod-card-link">
+                            <a href="trurail-simulations/conrail-u36b.html" class="mod-card-link">
                                 <h3 class="mod-card-title">Conrail U36B</h3>
                             </a>
                             <p class="mod-card-description">A repaint of GE's U36B into Conrail blue.</p>
