--- a/trurail-simulations.html
+++ b/trurail-simulations.html
@@ -355,7 +355,7 @@
                     
                     <div class="mod-card">
                         <a href="#" class="mod-card-link">
-                            <div class="mod-card-image" style="background-image: url('https://files.trainsimarchive.org/media/placeholder.jpg');"></div>
+                            <div class="mod-card-image" style="background-image: url('https://files.trainsimarchive.org/media/14a601_4df02ac3b4e64ab8a8bdab8ebc46aef3~mv2.jpg');"></div>
                         </a>
                         <div class="mod-card-content">
                             <a href="trurail-simulations/conrail-u36b.html" class="mod-card-link">
