--- a/trurail-simulations/conrail-u36b.html
+++ b/trurail-simulations/conrail-u36b.html
@@ -89,7 +89,7 @@
                 <div>
                     <div class="mod-gallery">
                         <div class="mod-gallery-main">
-                            <img id="mainDisplayImage" src="https://files.trainsimarchive.org/media/14a601_4df02ac3b4e64ab8a8bdab8ebc46aef3~mv2.jpg" alt="Southern Pacific GP9">
+                            <img id="mainDisplayImage" src="https://files.trainsimarchive.org/media/14a601_4df02ac3b4e64ab8a8bdab8ebc46aef3~mv2.jpg" alt="Conrail U36B">
                             <div class="gallery-controls">
                                 <button class="gallery-nav-btn gallery-nav-prev" onclick="event.stopPropagation(); manualNavigateGallery(-1)" aria-label="Previous">
                                     <i class="fas fa-chevron-left"></i>
