--- a/trurail-simulations/conrail-u36b.html
+++ b/trurail-simulations/conrail-u36b.html
@@ -136,12 +136,12 @@
                     <h3 style="font-size: 1.1rem; margin-bottom: 0.5rem;">Features</h3>
                     <ul class="requirements-list" style="margin-bottom: 1.5rem;">
                         <li>4K textures</li>
-                        <li>Revised lighting</li>
-                        <li>Updated cab with new view positions and animated wipers</li>
-                        <li>Improved sounds: horn, bell, and engine</li>
-                        <li>FanRailer physics integration</li>
+                        <li>Custom decals</li>
+                        <li>New Cab View Locations</li>
+                        <li>New Horn & Bell Sound/li>
+                        <li>FanRailer Physics</li>
                         <li>ALCO truck swap</li>
-                        <li>Dynamic numbering support</li>
+                        <li>Dynamic Numberingt</li>
 
                     </ul>
                     
