--- a/trurail-simulations/conrail-u36b.html
+++ b/trurail-simulations/conrail-u36b.html
@@ -138,10 +138,10 @@
                         <li>4K textures</li>
                         <li>Custom decals</li>
                         <li>New Cab View Locations</li>
-                        <li>New Horn & Bell Sound/li>
+                        <li>New Horn & Bell Sound</li>
                         <li>FanRailer Physics</li>
                         <li>ALCO truck swap</li>
-                        <li>Dynamic Numberingt</li>
+                        <li>Dynamic Numbering</li>
 
                     </ul>
                     
