--- a/index.html
+++ b/index.html
@@ -147,6 +147,8 @@
     <footer id="dynamicFooter">
         <div class="footer-content">
             <div class="footer-nav">
+                <a href="changelog.html">Changelog</a>
+                <span class="separator">•</span>
                 <a href="terms.html">Terms of Use</a>
                 <span class="separator">•</span>
                 <a href="privacy.html">Privacy Policy</a>
